module(
    name = "mujoco-mjx-test",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "0.36.0")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
    pip_data_exclude = [
        # We need to exclude the MuJoCo-app because its name contains a
        # white-space, which breaks Bazel.
        "**/MuJoCo*mjpython*.app/**",
    ],
)
use_repo(pip, "pypi")
