module(
    name = "mujoco-mjx-test",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "0.36.0")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.whl_mods(
    hub_name = "whl_mods",
    whl_name = "mujoco",
    data_exclude_glob = [
        "site-packages/mujoco/MuJoCo (mjpython).app/**/*",
    ],
)
use_repo(pip, "whl_mods")
pip.parse(
    download_only = True,
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
    whl_modifications = {
        "@whl_mods//:mujoco.json": "mujoco",
    }
)
pip.override(
    # file = "@pypi//mujoco:whl",
    file = "mujoco-3.2.3-cp311-cp311-macosx_11_0_arm64.whl",
    patches = [
        "//:mujoco-fix-namespace.patch",
    ],
    patch_strip = 0,
)
use_repo(pip, "pypi")
